--- a/src/main/resources/static/css/updateforms.css
+++ b/src/main/resources/static/css/updateforms.css
@@ -77,11 +77,11 @@ span {
 }
 
 input {
-	text-align: center;
-	font-size: 20px;
-	height: 80%;
-	width: 12%;
+	padding-left:1%;
+	height:100%;
 	border-radius: 20px;
+	text-align:center;
+	font-size:20px;
 }
 
 select {
@@ -95,7 +95,7 @@ select {
 }
 
 button {
-	width: 20%;
+	width: 100%;
 	height: 30px;
 	border: none;
 	color: white;
